<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_marginStart="74dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="74dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/username_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_marginStart="74dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="74dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/user_mail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextTextPostalAddress"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_marginStart="74dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="74dp"
        android:ems="10"
        android:inputType="textPostalAddress"
        android:hint="@string/user_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
        tools:ignore="MissingConstraints"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_marginStart="74dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="74dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/user_passwd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPostalAddress"
        tools:ignore="MissingConstraints"
        android:autofillHints="" />

    <Button
        android:id="@+id/button3"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="136dp"
        android:backgroundTint="#26CA91"
        android:text="@string/new_user"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button4"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="136dp"
        android:backgroundTint="#26CA91"
        android:text="@string/back_user"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>