<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button10"
        android:layout_width="390dp"
        android:layout_height="115dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="11dp"
        android:backgroundTint="#26CA91"
        android:scrollbarSize="30dp"
        android:text="@string/update_user"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button9"
        android:layout_width="390dp"
        android:layout_height="115dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="11dp"
        android:backgroundTint="#26CA91"
        android:text="@string/family_menu"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button10" />

    <Button
        android:id="@+id/button8"
        android:layout_width="390dp"
        android:layout_height="115dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="11dp"
        android:backgroundTint="#26CA91"
        android:text="@string/friend_menu"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

    <Button
        android:id="@+id/button7"
        android:layout_width="390dp"
        android:layout_height="115dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="11dp"
        android:backgroundTint="#26CA91"
        android:text="@string/delete_user"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

</androidx.constraintlayout.widget.ConstraintLayout>