<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ExtraText">

    <Button
        android:id="@+id/button26"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_marginStart="140dp"
        android:layout_marginBottom="116dp"
        android:backgroundTint="#26CA91"
        android:text="@string/back_user"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button20"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_marginStart="141dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="140dp"
        android:backgroundTint="#26CA91"
        android:text="@string/kensaku_user"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="229dp"
        android:layout_height="43dp"
        android:layout_marginStart="54dp"

        android:layout_marginTop="75dp"
        android:layout_marginEnd="128dp"
        android:text="家族ユーザ検索"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/user_mail"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="MissingConstraints"
        android:autofillHints="" />

</androidx.constraintlayout.widget.ConstraintLayout>